--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eshops32",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,14 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.56.2",
-    "@tanstack/react-query-devtools": "^5.56.2",
     "axios": "^1.7.7",
     "framer-motion": "^11.5.4",
+    "i18next": "^23.15.1",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.0",
+    "react-dropzone": "^14.2.3",
+    "react-i18next": "^15.0.2",
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.26.2",
+    "react-slick": "^0.30.2",
+    "recharts": "^2.12.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "zustand": "^5.0.0-rc.2"
   },
@@ -26,7 +38,7 @@
     "@tanstack/eslint-plugin-query": "^5.56.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
