--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@emotion/styled": "^11.13.0",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.7",
+    "country-telephone-data": "^0.6.3",
     "framer-motion": "^11.5.4",
     "i18next": "^23.15.1",
+    "libphonenumber-js": "^1.11.10",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
@@ -39,6 +41,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "dotenv-webpack": "^8.1.0",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
