--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
