--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.11.4",
     "i18next": "^23.15.2",
     "libphonenumber-js": "^1.11.11",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
