--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-i18next": "^15.0.2",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-number-format": "^5.4.2",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
