--- a/package.json
+++ b/package.json
@@ -11,45 +11,47 @@
   },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.10.1",
+    "@chakra-ui/react": "^2.10.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query": "^5.59.15",
     "axios": "^1.7.7",
     "country-telephone-data": "^0.6.3",
-    "framer-motion": "^11.11.4",
-    "i18next": "^23.15.2",
-    "libphonenumber-js": "^1.11.11",
+    "framer-motion": "^11.11.9",
+    "i18next": "^23.16.0",
+    "libphonenumber-js": "^1.11.12",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.9",
     "react-hot-toast": "^2.4.1",
-    "react-i18next": "^15.0.2",
+    "react-i18next": "^15.0.3",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-number-format": "^5.4.2",
     "react-pro-sidebar": "^1.1.0",
-    "react-router-dom": "^6.26.2",
+    "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.1",
     "react-slick": "^0.30.2",
-    "recharts": "^2.12.7",
+    "react-window": "^1.8.10",
+    "recharts": "^2.13.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@tanstack/eslint-plugin-query": "^5.59.2",
+    "@eslint/js": "^9.13.0",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react-swc": "^3.7.1",
     "dotenv-webpack": "^8.1.0",
-    "eslint": "^9.12.0",
+    "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.10.0",
-    "vite": "^5.4.1"
+    "globals": "^15.11.0",
+    "vite": "^5.4.9"
   }
 }
