--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "axios": "^1.7.7",
     "country-telephone-data": "^0.6.3",
     "framer-motion": "^11.11.9",
+    "i": "^0.3.7",
     "i18next": "^23.16.2",
     "libphonenumber-js": "^1.11.12",
     "lodash": "^4.17.21",
+    "npm": "^10.9.0",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.10",
     "react-hot-toast": "^2.4.1",
