--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-colorful": "^5.6.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.10",
+    "react-error-boundary": "^5.0.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^15.0.3",
     "react-icons": "^5.3.0",
